# fifo-wms

./: .gitignore  DEPLOY.md  ROADMAP.md  WMS_TZ_v0.1.md  render.yaml  vercel.json
wms/: .dockerignore  .env.example  Dockerfile  ROADMAP.md  alembic.ini  docker-compose.yml  fix_smartup_and_categories.py  pyproject.toml  seed_locations.py  start.sh  sync_smartup_now.py
wms/alembic/: env.py
wms/alembic/versions/: 0001_baseline.py  0002_putaway_reservations.py  0003_user_is_approved.py  0004_faza_c_safety_stock.py
wms/app/: main.py
wms/app/connectors/: aslbelgisi.py  base.py  plugins.py  registry.py  smartup.py
wms/app/core/: circuit.py  config.py  connector_factory.py  crypto.py  deps.py  events.py  health.py  logging.py  security.py  seed.py
wms/app/db/: base.py
wms/app/models/: __init__.py  audit.py  auth.py  connector.py  exception.py  inventory.py  ledger.py  reservation.py  sensor.py  task.py  tenant.py  warehouse.py
wms/app/schemas/: auth.py  inventory.py  operations.py  planning.py  shipment.py  tenant.py  warehouse.py
wms/app/services/: analytics.py  audit.py  export.py  (+18 more)
wms/docs/: WMS_MASTER_PLAN.md  backup.md  smartup_api_reference.md  smartup_api_reference_full.md
wms/frontend/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
wms/scripts/: backup_db.sh  clone_local_to_neon.py  init_db.py  seed_admin.py
wms/tests/: test_circuit_breaker.py  test_config_guard.py  test_connector_registry.py  test_crypto.py  test_faza_c.py  test_picking_integrity.py  test_putaway_counts.py  test_putaway_reservation.py  test_slotting_rules.py
(+170 files in other folders)
